--- a/index.html
+++ b/index.html
@@ -20,18 +20,31 @@
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
-    <header class="global-header">
-      <a href="index.html" class="logo">studio</a>
-      <nav class="main-nav">
-        <ul class="main-nav-ul">
-          <li><a href="./index.html" class="active">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="./contacts.html">Contacts</a></li>
-        </ul>
-      </nav>
-      <div class="social-div">
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11-000-111-11-11">+11 (000) 111-11-11</a>
+    <header>
+      <div class="global-header">
+        <a href="index.html" class="logo">studio</a>
+        <svg
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+          class="burger-menu"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+        <nav class="main-nav">
+          <ul class="main-nav-ul">
+            <li><a href="./index.html" class="active">Studio</a></li>
+            <li><a href="./portfolio.html">Portfolio</a></li>
+            <li><a href="./contacts.html">Contacts</a></li>
+          </ul>
+        </nav>
+        <div class="social-div">
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="tel:+11-000-111-11-11">+11 (000) 111-11-11</a>
+        </div>
       </div>
     </header>
     <main class="global-main">
@@ -52,41 +65,39 @@
             </div>
             <form class="forms" name="signup_form" autocomplete="on" novalidate>
               <div class="labels">
-                <label class="name-label">
-                  Name
-                  <div class="input-container">
+                <div class="name-label">
+                  <label class="input-container">
+                    Name
                     <input type="text" name="name" class="input-name" />
                     <svg>
                       <use
                         href="icons.svg/symbol-defs.svg#icon-person-black"
                       ></use>
                     </svg>
-                  </div>
-                </label>
-
-                <label class="phone-label">
-                  Phone
-                  <div class="input-container">
+                  </label>
+                </div>
+                <div class="phone-label">
+                  <label class="input-container">
+                    Phone
                     <input type="tel" name="phone" class="input-phone" />
                     <svg>
                       <use
                         href="icons.svg/symbol-defs.svg#icon-phone-black"
                       ></use>
                     </svg>
-                  </div>
-                </label>
-                <label class="email-label">
-                  Email
-                  <div class="input-container">
+                  </label>
+                </div>
+                <div class="email-label">
+                  <label class="input-container">
+                    Email
                     <input type="email" name="email" class="input-email" />
                     <svg>
                       <use
                         href="icons.svg/symbol-defs.svg#icon-email-black"
                       ></use>
                     </svg>
-                  </div>
-                </label>
-
+                  </label>
+                </div>
                 <label class="comment-label">
                   Comment
                   <textarea
@@ -96,24 +107,25 @@
                     class="textare-comment"
                   ></textarea>
                 </label>
-
-                <label class="checkbox-label">
-                  <input
-                    type="checkbox"
-                    name="privacy-policy"
-                    value="conditions"
-                    class="input-checkbox"
-                  />
-                  <svg class="checkbox-svg">
-                    <use
-                      href="./icons.svg/symbol-defs.svg#icon-checkbox-checked"
-                    ></use>
-                  </svg>
-                  <p>
+                <div class="checkbox-container">
+                  <label class="checkbox-label">
+                    <input
+                      type="checkbox"
+                      name="privacy-policy"
+                      value="conditions"
+                      class="input-checkbox"
+                    />
+                    <svg class="checkbox-svg">
+                      <use
+                        href="./icons.svg/symbol-defs.svg#icon-checkbox-checked"
+                      ></use>
+                    </svg>
+                  </label>
+                  <p class="checkbox-paragraph">
                     I accept the terms and conditions of the
                     <a href="#Privacy-Policy"><u>Privacy Policy</u></a>
                   </p>
-                </label>
+                </div>
 
                 <div class="container-submit">
                   <button type="submit" class="submit">Send</button>
@@ -474,16 +486,17 @@
       <!-- Subscribe container -->
       <div class="subscribe-container">
         <form class="subscribe-form">
-          <label>
+          <div>
             <h2 class="subscribe-title">Subscribe</h2>
-
-            <input
-              type="email"
-              name="email"
-              placeholder="E-mail"
-              class="input-email-footer"
-            />
-          </label>
+            <label>
+              <input
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                class="input-email-footer"
+              />
+            </label>
+          </div>
           <div class="subscribe-footer">
             <button type="submit" class="subscribe-btn">
               Subscribe<svg>
