--- a/portfolio.html
+++ b/portfolio.html
@@ -20,26 +20,28 @@
     />
   </head>
   <body>
-    <header class="global-header">
-      <a href="index.html" class="logo">studio</a>
-      <nav class="main-nav">
-        <ul class="main-nav-ul">
-          <li><a href="./index.html">Studio</a></li>
+    <header>
+      <div class="global-header">
+        <a href="index.html" class="logo">studio</a>
+        <nav class="main-nav">
+          <ul class="main-nav-ul">
+            <li><a href="./index.html">Studio</a></li>
 
-          <li><a href="./portfolio.html" class="active">Portfolio</a></li>
+            <li><a href="./portfolio.html" class="active">Portfolio</a></li>
 
-          <li><a href="./contacts.html">Contacts</a></li>
-        </ul>
-      </nav>
-      <div class="social-div">
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11-000-111-11-11">+11 (000) 111-11-11</a>
+            <li><a href="./contacts.html">Contacts</a></li>
+          </ul>
+        </nav>
+        <div class="social-div">
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="tel:+11-000-111-11-11">+11 (000) 111-11-11</a>
+        </div>
       </div>
     </header>
 
     <main>
       <!-- Button section -->
-      <section class="first-section">
+      <div class="first-div">
         <div class="container-button">
           <ul class="section-button">
             <li><button type="button" class="all-button">All</button></li>
@@ -51,7 +53,8 @@
             </li>
           </ul>
         </div>
-      </section>
+      </div>
+
       <!-- Section with banking app,cashless payment and meditation app -->
       <section class="second-section">
         <div class="second-container">
@@ -283,16 +286,17 @@
       <!-- Subscribe container -->
       <div class="subscribe-container">
         <form class="subscribe-form">
-          <label>
+          <div>
             <h2 class="subscribe-title">Subscribe</h2>
-
-            <input
-              type="email"
-              name="email"
-              placeholder="E-mail"
-              class="input-email-footer"
-            />
-          </label>
+            <label>
+              <input
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                class="input-email-footer"
+              />
+            </label>
+          </div>
           <div class="subscribe-footer">
             <button type="submit" class="subscribe-btn">
               Subscribe<svg>
