--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
       <!-- Section 3 -->
       <section class="third-section">
-        <div><h2>what are we doing</h2></div>
+        <div class="third-section-title"><h2>what are we doing</h2></div>
 
         <div class="third-section-img">
           <ul>
@@ -425,7 +425,7 @@
     <footer class="global-footer">
       <!-- Logo studio footer -->
       <div class="footer-container">
-        <a href="index.html" class="logo">studio</a>
+        <a href="index.html" class="logo-footer">studio</a>
 
         <p>
           Increase the flow of customers and <br />
@@ -486,7 +486,7 @@
       <!-- Subscribe container -->
       <div class="subscribe-container">
         <form class="subscribe-form">
-          <div>
+          <div class="form-container">
             <h2 class="subscribe-title">Subscribe</h2>
             <label>
               <input
