--- a/index.html
+++ b/index.html
@@ -20,20 +20,93 @@
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
-    <header>
-      <div class="global-header">
-        <a href="index.html" class="logo">studio</a>
+    <div class="js-menu-container">
+      <a class="menu-toggle js-close-menu">
         <svg
+          fill="currentColor"
           viewBox="0 0 20 20"
           xmlns="http://www.w3.org/2000/svg"
-          class="burger-menu"
+          width="24"
+          height="24"
         >
           <path
             fill-rule="evenodd"
-            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
             clip-rule="evenodd"
           ></path>
         </svg>
+      </a>
+      <nav class="mobail-nav">
+        <ul class="mobail-nav-ul">
+          <li><a href="./index.html" class="active">Studio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
+          <li><a href="./contacts.html">Contacts</a></li>
+        </ul>
+      </nav>
+      <div class="mobail-social-div">
+        <a href="mailto:info@devstudio.com" class="mobail-social-div-mailto"
+          >info@devstudio.com</a
+        >
+        <a href="tel:+11-000-111-11-11" class="mobail-social-div-tel"
+          >+11 (000) 111-11-11</a
+        >
+      </div>
+      <div class="icons-mobail-link">
+        <a
+          href="https://www.instagram.com/"
+          target="_blank"
+          class="icon"
+          aria-label="instagram-link"
+          ><svg>
+            <use href="./icons.svg/symbol-defs.svg#icon-instagram"></use>
+          </svg>
+        </a>
+        <a
+          href="https://www.twitter.com/"
+          target="_blank"
+          class="icon"
+          aria-label="twitter-link"
+          ><svg>
+            <use href="./icons.svg/symbol-defs.svg#icon-twitter"></use>
+          </svg>
+        </a>
+        <a
+          href="https://www.facebook.com/"
+          target="_blank"
+          class="icon"
+          aria-label="facebook-link"
+          ><svg>
+            <use href="./icons.svg/symbol-defs.svg#icon-facebook"></use>
+          </svg>
+        </a>
+        <a
+          href="https://www.linkedin.com/"
+          target="_blank"
+          class="icon"
+          aria-label="linkedin-link"
+          ><svg>
+            <use href="./icons.svg/symbol-defs.svg#icon-linkedin"></use>
+          </svg>
+        </a>
+      </div>
+    </div>
+    <header>
+      <div class="global-header">
+        <a href="index.html" class="logo">studio</a>
+        <a class="js-open-menu">
+          <svg
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+            class="burger-menu"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </a>
+
         <nav class="main-nav">
           <ul class="main-nav-ul">
             <li><a href="./index.html" class="active">Studio</a></li>
@@ -507,6 +580,7 @@
         </form>
       </div>
     </footer>
+    <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
